# tap-s3

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_s3/: __init__.py  client.py  s3.py  tap.py
tests/: __init__.py  test_core.py
