[tool.poetry]
name = "MeltanoSDK-tap-s3"
version = "0.0.1"
description = "`tap-s3` is a Singer tap for S3, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Alo"]
keywords = [
    "ELT",
    "S3",
]
license = "Apache-2.0"
packages = [
    { include = "tap_s3" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.30.0" }
boto3 = { version="^1.28.0" }
fastavro = { version="^1.8.0" }
python-snappy = { version="^0.6.1" }
orjson = { version="^3.9.2" }
fs-s3fs = { version = "^1.1.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.30.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_s3"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_s3"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-s3 = 'tap_s3.tap:TapS3.cli'
